# alpaca2pg

./: Dockerfile  Makefile  Projectfile  README.md  config.mk  pyproject.toml  setup.py  tox.ini
.github/workflows/: docker-publish.yml
alpaca2pg/: __main__.py  pgutils.py  tutorial.py
tests/: conftest.py  test_main.py  test_tutorial.py
